2005-08-23  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_pcix_nobridge, show_pcix_bridge): Cleaned up dumping of PCI-X
	capabilities. Includes partial support for PCI-X 2.0 (probably incomplete
	as I haven't seen the spec).

	* lspci.c: Quell warnings about unused parameters.

	* lib/header.h: Merged definitions of extended capabilities and some new
	PCI-X capability bits from linux-2.6.11/include/pci.h.

	* lspci.c (show_caps): Try to scan extended capabilities only if the
	device has either PCI-X or PCI Express capability in its normal capability
	list.

	* lib/dump.c (dump_init): Reading of dumps works again. The dump reader
	now also remembers how much data it has read and refuses attempts to
	access more than that.

	* setpci.man, lspci.c, README: prefer spelling "buses" over "busses".

	* lspci.c: If alloca() is not available, use xmalloc(), not malloc().

	* lib/configure: Added x86_64 on Linux.

2005-08-22  Martin Mares  <mj@ucw.cz>

	* lib/filter.c (pci_filter_parse_slot): Fixed parsing of domain filters.
	Thanks to Matthew Wilcox for bug report.

	* lspci.c: Corrected spelling of "Hz" (it was "hz" at several places).
	Thanks to Krzysztof Oledzki for pointing that out.

2004-08-19  Martin Mares  <mj@ucw.cz>

	* pciutils.spec (%attr): Setting attributes for /sbin/* is an anachronism,
	because pciutils by default install to /usr/sbin. Update.

2004-08-13  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.99-test8.

	* lib/types.h, lib/pci.h, lib/sysdep.h: `byte' and `word' are
	no longer exported to the outside world.

	* README.Windows: Updated.

	* maint/release: Substitute version number in win32/config.h.

	* win32/config.h: Added.

	* lib/sysdep.h (bzero, strcasecmp): are macros on Windows.

	* compat/getopt.[ch]: Added copies of getopt.[ch] from the GNU
	C library for use on systems where the default libraries lack
	proper getopt. Currently used by the Windows port.

	* lib/sysdep.h, lib/types.h: Updates of the Windows port from
	Alexander Stock.
