@@ -1,7 +1,3 @@
-- lspci: don't die when non-root tries to dump cardbus data; mention the
-  "available only to root" things in the man page. And possibly adjust exit code.
-- reading of VPD
-
 - names.c: rewrite
 
 - update the web page
@@ -11,6 +7,7 @@
 - some extended capabilities are currently only partially decoded
 - finish PCI-X 2.0 capabilities
 - finish PCI Express support
+- reading of VPD
 
 PCIIDS:
 - another mirror at Atrey?
