@@ -15,6 +15,12 @@ is a utility for querying and configuring PCI devices.
 
 All numbers are entered in hexadecimal notation.
 
+Root privileges are necessary for almost all operations, excluding reads
+of the standard header of the configuration space on some operating systems.
+Please see
+.BR lspci(8)
+for details on access rights.
+
 .SH OPTIONS
 .TP
 .B -v
@@ -42,7 +48,6 @@ operations does before you actually execute it.
 Shows
 .I setpci
 version. This option should be used stand-alone.
-
 
 .SH DEVICE SELECTION
 .PP
@@ -91,10 +96,12 @@ to be changed to values of the corresponding bits in the
 .SH REGISTER NAMES
 .PP
 .B setpci
-knows the following configuration register names. See PCI bus specs for their precise
+knows the following configuration register names. See PCI bus specifications for their precise
 meaning or consult
+.B header.h
+or
 .B /usr/include/linux/pci.h
-for few comments.
+for a couple of comments.
 .PP
 .nf
 VENDOR_ID
@@ -164,34 +171,10 @@ CB_LEGACY_MODE_BASE
 
 .SH PCILIB OPTIONS
 The PCI utilities use PCILIB (a portable library providing platform-independent
-functions for PCI configuration space access) to talk to the PCI cards. The following
-options control parameters of the library, especially what access method it uses.
-By default, PCILIB uses the first available access method and displays no debugging
-messages. Each switch is accompanied by a list of hardware/software configurations
-it's supported in.
-
-.TP
-.B -P <dir>
-Force use of Linux /proc/bus/pci style configuration access, using
-.B <dir>
-instead of /proc/bus/pci. (Linux 2.1 or newer only)
-.TP
-.B -H1
-Use direct hardware access via Intel configuration mechanism 1. (i386 and compatible only)
-.TP
-.B -H2
-Use direct hardware access via Intel configuration mechanism 2. Warning: This method
-is able to address only first 16 devices on any bus and it seems to be very
-unreliable in many cases. (i386 and compatible only)
-.TP
-.B -F <file>
-Extract all information from given file containing output of lspci -x. This is very
-useful for analysis of user-supplied bug reports, because you can display the
-hardware configuration in any way you want without disturbing the user with
-requests for more dumps. (All systems)
-.TP
-.B -G
-Increase debug level of the library. (All systems)
+functions for PCI configuration space access) to talk to the PCI cards. Please
+see
+.BR lspci(8)
+for a list of switches controlling behavior of the library.
 
 .SH EXAMPLES
 .PP
